2004-06-05  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (currency_pattern): new function

2004-04-17  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (native_setup_search): new URL / CGI options
	(parse_tree): handle new HTML formatting

2004-04-08  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm (parse_tree): fix undef warning

	* lib/WWW/Search/Ebay.pm (parse_tree): handle new HTML formatting

2003-12-21  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/Completed.pm: removed because searching completed auctions now requires registered user login
	
	* t/completed.t: removed because searching completed auctions now requires registered user login

2003-12-06  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm: fixed so that "featured" auctions are put into the properly sorted order

2003-11-13  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): in change_date, convert nbsp to regular space

2003-10-27  Kingpin  <mthurn@verizon.net>

	* t/enddate.t: beefed-up tests

	* t/basic.t: separated test files

	* t/completed.t: beefed-up tests

	* lib/WWW/Search/Ebay.pm (native_setup_search): let the host and path be NON-generic args (thanks to Mike Schilli)

2003-07-13  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Ebay/Completed.pm: new backend (thanks to Troy Arnold)

2003-02-06  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): Fixed parsing for slightly-changed ebay.com pages

	* test.pl: added some tests to actually look at the results

2002-10-22  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm (native_setup_search): Fixed hash vs. array bug?

2002-10-21  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): Fixed parsing for Buy-It-Now prices, and foreign currencies

2002-07-24  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/WWW/Search/Ebay.pm (parse_tree): fix parsing around new images in table
