@@ -1,4 +1,3 @@
-blibdirs
 ChangeLog
 inc/Date/Manip.pm
 inc/Module/Install.pm
